docs: update version file with commit hash

--- a/version/v2.1.0-web-application-implementation.md
+++ b/version/v2.1.0-web-application-implementation.md
@@ -1,7 +1,7 @@
 # Version 2.1.0 - Web Application Implementation
 
 **Release Date**: December 2024  
-**Commit Hash**: `[to be added after commit]`  
+**Commit Hash**: `607985057a5f7256c4b309584150f8286b04ea79`  
 **Previous Version**: v2.0.0 (Serve Segmentation Implementation)
 
 ## 🎯 Version Overview
