docs: update version document with commit hash

--- a/version/v2.1.0-ux-plan-v2-implementation.md
+++ b/version/v2.1.0-ux-plan-v2-implementation.md
@@ -1,7 +1,7 @@
 # Version 2.1.0 - UX Plan V2 Implementation
 
 **Release Date**: August 24, 2025  
-**Commit Hash**: `[commit-hash]`  
+**Commit Hash**: `8b436eb`  
 **Previous Version**: v2.0.0 (Serve Segmentation Implementation)
 
 ## 🎯 Version Overview
